@@ -1,5 +1,12 @@
 2018-12-12 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/stm8/ralloc.c,
+	  src/z80/ralloc.c,
+	  support/regression/tests/bug-2501.c:
+	  Fix bug #2501.
+
+2018-12-12 Philipp Klaus Krause <pkk AT spth.de>
+
 	* sdas/asz80/z80mch.c:
 	  Fix handling of tst for eZ80, patch by Hynek Sladký.
 	* src/z80/gen.c:
